Add new UMA suffix to study high bandwidth downloads

Some parallel downloads are showing extreme high bandwidth.
Add new UMA suffix to check why this happens.

BUG=727867

Change-Id: Ibffad52bc5235ab19d7e4465f26b24bdc585bd03
Reviewed-on: https://chromium-review.googlesource.com/517975
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Xing Liu <xingliu@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#475966}
Former-commit-id: 306a8b980f80791f0c82f74c1492a3257614dd64